--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
-        run: yarn build
+        run: npm run build
 
   # Deployment job
   deploy:
