--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "18.3.4",
     "@types/react-dom": "18.3.0",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/og": "^0.6.3",
     "@vercel/speed-insights": "^1.0.12",
     "feed": "^4.2.2",
     "geist": "1.3.1",
